# TutorialSyleProject

./: .gitignore
AkkaRemote/LocalAkkaActor/: build.sbt
AkkaRemote/RemoteAkka/: .gitignore  build.sbt
AkkaUdp/Listener/: build.sbt
AkkaUdp/ScheduledSender/: build.sbt
CppProjects/ReceivedSerialStringFromAThreadAsynchronously/: CMakeLists.txt  Receiver.cpp  Receiver.h  main.cpp
CppProjects/ReceivedSerialStringFromAThreadAsynchronously/ArduinoSerialSendingSampleProgram/: ArduinoSerialSendingSampleProgram.ino
CppProjects/ReceivedSerialStringFromAThreadAsynchronously/Serial/: SerialHelper.cpp  SerialHelper.h  TimeoutSerial.cpp  TimeoutSerial.h
JavaCvScala/: build.sbt
JavaCvScala/project/: plugins.sbt
QtProject/OpenGLAndZmq/: CubeObject.cpp  CubeObject.h  MainWindow.cpp  MainWindow.h  OpenGLandZmq.pro  Publisher.py  ReadMe.md  SceneModifier.cpp  SceneModifier.h  Subscriber.cpp  Subscriber.h  View3d.cpp  main.cpp  mainwindow.ui
QtProject/UiQNode/: TestCube.cpp  TestCube.h  UiCube.pro  main.cpp  mainwindow.cpp  mainwindow.h  scenemodifier.cpp  scenemodifier.h  view3d.h
QtProject/ZmqSubscriberQt/: ZmqSubscriber.pro  main.cpp  subscriber.cpp  subscriber.h
QtProject/shapePlusUi/: main.cpp  mainwindow.ui  scenemodifier.cpp  shapePlusUi.pro  view3d.cpp
RetrofitAndGson/app/: build.gradle
RetrofitAndGson/gradle/wrapper/: gradle-wrapper.properties
Two Different Platform/SendProtoBuffFromRaspberryPiToUbuntuQt/AtUbuntu/: Client.cpp  Client.h
play-scala-javascript-routing/: .gitignore  build.sbt
play-scala-javascript-routing/conf/: routes
(+34 files in other folders)
